# GenAI_Playground

./: README.md
django-mcp-demo/: mcp_server.py
django-mcp-demo/api/: api.py
django-mcp-demo/core/: settings.py  urls.py
flask-mcp-demo/: README.md  app.py  main.py  mcp_server.py  pyproject.toml
langgraph-mcp-baseline/: README.md  main.py  manage.py  pyproject.toml
langgraph-mcp-baseline/agents/: agent.py
langgraph-mcp-baseline/api/: urls.py  views.py
langgraph-mcp-baseline/langgraph_backend/: asgi.py  settings.py  urls.py  wsgi.py
langgraph-mcp-baseline/servers/: weather_server.py
